<resources>
    <string name="app_name">UnitConverter</string>
    <string name="_00">00</string>
    <string name="kilometres">Kilometres</string>
    <string name="metres">Metres</string>
    <string name="nanometres">Nanometres</string>
    <string name="miles">Miles</string>
    <string name="yards">Yards</string>
    <string name="centimetres">Centimetres</string>
    <string name="mass">MASS</string>
    <string name="area">AREA</string>
    <string name="pressure">PRESSURE</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="speed">SPEED</string>
    <string name="capacity">CAPACITY</string>
    <string name="energy">ENERGY</string>
    <string name="length">LENGTH</string>
    <string name="mass_converter">MASS CONVERTER</string>
    <string name="length_converter">LENGTH CONVERTER</string>
    <string name="centimetre">Centimetre</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="micrometres">Micrometres</string>
    <string name="millimetres">Millimetres</string>
    <string name="select_unit_of_conversion">SELECT UNIT OF CONVERSION</string>
    <string name="nanogram">Nanogram</string>
    <string name="volume">VOLUME</string>
    <string name="cubic_millilitre">Cubic millilitre</string>
    <string name="cubic_centimetre">Cubic centimetre</string>
    <string name="m3">m3</string>
    <string name="cubic_millimetre">Cubic millimetre</string>
    <string name="square_rod">Square rod</string>
    <string name="enter_amount">Enter amount</string>
    <string name="convert">Convert</string>
    <string name="conversion_result">Conversion Result</string>
    <string name="currency_converter">CURRENCY CONVERTER</string>
    <string name="barn">Barn</string>
    <string name="hectare">Hectare</string>
    <string name="square_metre">Square metre</string>
    <string name="acre">Acre</string>
    <string name="square_pole">Square pole</string>
    <string name="rood">Rood</string>
    <string name="square_foot">Square foot</string>
    <string name="square_yard">Square yard</string>
    <string name="are">Are</string>
    <string name="square_mile">Square mile</string>
    <string name="area_converter">AREA CONVERTER</string>
    <string name="cubic_metre">Cubic metre</string>
    <string name="pint">Pint</string>
    <string name="litre">Litre</string>
    <string name="gallon">Gallon</string>
    <string name="millilitre">Millilitre</string>
    <string name="dram">Dram</string>
    <string name="cc">CC</string>
    <string name="fluid_ounce">Fluid ounce</string>
    <string name="volume_converter">VOLUME CONVERTER</string>
    <string name="joule">Joule</string>
    <string name="kiloton">Kiloton</string>
    <string name="watt_second">Watt second</string>
    <string name="horsepower_hour">Horsepower-hour</string>
    <string name="kilowatt_hour">Kilowatt-hour</string>
    <string name="watt_hour">Watt-hour</string>
    <string name="calories">Calories</string>
    <string name="newton_metre">Newton metre</string>
    <string name="ton_hour">Ton-hour</string>
    <string name="kilojoule">Kilojoule</string>
    <string name="energy_converter">ENERGY CONVERTER</string>
    <string name="kilograms">Kilograms</string>
    <string name="ounces">Ounces</string>
    <string name="milligrams">Milligrams</string>
    <string name="carats">Carats</string>
    <string name="pounds">Pounds</string>
    <string name="tonnes">Tonnes</string>
    <string name="microgram">Microgram</string>
    <string name="grams">Grams</string>
    <string name="atmosphere_technical">Atmosphere Technical</string>
    <string name="pascal">Pascal</string>
    <string name="standard_atmosphere">Standard atmosphere</string>
    <string name="kilopascal">KiloPascal</string>
    <string name="bar">Bar</string>
    <string name="millimetre_mercury">Millimetre mercury</string>
    <string name="psi">psi</string>
    <string name="millibar">Millibar</string>
    <string name="newton_square_metre">Newton/square metre</string>
    <string name="ksi">ksi</string>
    <string name="pressure_converter">PRESSURE CONVERTER</string>
    <string name="earth_s_velocity">Earth\'s velocity</string>
    <string name="knots">Knots</string>
    <string name="kilometres_hour">Kilometres/hour</string>
    <string name="mach">Mach</string>
    <string name="miles_hour">Miles/hour</string>
    <string name="metres_second">Metres/second</string>
    <string name="light_velocity_in_a_vacuum">Light velocity in a vacuum</string>
    <string name="speed_converter">SPEED CONVERTER</string>
    <string name="degrees_celsius">Degrees Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="reaumur">Reaumur</string>
    <string name="rankine">Rankine</string>
    <string name="temperature_converter">TEMPERATURE CONVERTER</string>
    <string name="triple_point_of_water">Triple point of water</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>
    <string name="recalculate_your_bmi">Recalculate Your BMI</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="height">Height</string>
    <string name="_170">170</string>
    <string name="cm">cm</string>
    <string name="_29">29</string>
    <string name="underweight">Underweight</string>
    <string name="your_bmi_category_is">YOUR BMI CATEGORY IS</string>
    <string name="gender">Gender</string>
    <string name="_55">55</string>
</resources>