<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/ic_c"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Spinner
                android:id="@+id/spinner_from_currency"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/spinner" />

            <Spinner
                android:id="@+id/spinner_to_currency"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/spinner" />

            <EditText
                android:id="@+id/editText_amount"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/spinner"
                android:hint="@string/enter_amount"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textColorHint="@color/gray" />

            <Button
                android:id="@+id/btn_convert"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/green"
                android:text="@string/convert"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/conversion_result"
                android:textColor="@color/green"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>